--- a/argo/app1.yaml
+++ b/argo/app1.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: example-app
+  name: helm-app
   namespace: argocd
 spec:
   project: default
@@ -9,14 +9,17 @@ spec:
     repoURL: https://github.com/techarx/argodemo.git
     targetRevision: HEAD
     path: app-helm
+    helm:
+      values: |
+        image:
+          tag: "1.16.0"
     directory:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: app-helm
+    namespace: example-app
   syncPolicy:
     automated:
       prune: false
       selfHeal: false
-    syncOptions:
-      - CreateNamespace=true
+      
